clang/test/BSC/Positive/Trait/GenericTrait/impl_trait_for_undefine_type1/impl_trait_for_undefine_type1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// expected-no-diagnostics

trait F<T> {
};

impl trait F<int> for struct S;