clang/test/BSC/Negative/Generic/StructAndFunction/CstyleCast/CstyleCast.cbs
// RUN: %clang_cc1 -verify %s
// expected-no-diagnostics

void s<T>(T future) {
    (void *) future;
}
